<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.gov.moj.cp.azure.ragservice</groupId>
    <artifactId>cp-ai-rag-service</artifactId>
    <version>17.0.66-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>AI RAG service</name>
    <description>Generative AI service using native azure capabilities</description>

    <modules>
        <module>ai-document-shared-artefacts</module>
        <module>ai-document-metadata-check-function</module>
        <module>ai-document-ingestion-function</module>
        <module>ai-document-answer-retrieval-function</module>
        <module>ai-document-answer-scoring-function</module>
        <module>ai-document-status-check-function</module>
        <module>ai-service-orchestration-test</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <azure.functions.maven.plugin.version>1.24.0</azure.functions.maven.plugin.version>
        <azure.functions.java.library.version>3.2.3</azure.functions.java.library.version>
        <plugins.maven.jgitflow.version>1.0-m5.1</plugins.maven.jgitflow.version>
        <azure.openai.version>1.0.0-beta.16</azure.openai.version>
        <junit-jupiter-engine.version>6.0.2</junit-jupiter-engine.version>
        <mockito-junit-jupiter.version>5.21.0</mockito-junit-jupiter.version>
        <assertj-core.version>3.27.7</assertj-core.version>
        <langchain4j.version>0.30.0</langchain4j.version>
        <jackson.version>2.15.2</jackson.version>
        <opentelemetry-sdk.version>1.58.0</opentelemetry-sdk.version>
        <api-cp-ai-rag.version>0.0.9</api-cp-ai-rag.version>
        <hibernate-validator.version>9.0.1.Final</hibernate-validator.version>
        <jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>

        <!-- SonarQube Properties -->
        <sonar.projectKey>uk.gov.moj.cp.azure.ragservice:cp-ai-rag-service</sonar.projectKey>
        <sonar.projectName>CP AI RAG Service</sonar.projectName>

        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.reporting.outputDirectory}/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <plugins.jacoco.version>0.8.14</plugins.jacoco.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>external.atlassian.jgitflow</groupId>
                    <artifactId>jgitflow-maven-plugin</artifactId>
                    <version>${plugins.maven.jgitflow.version}</version>
                    <configuration>
                        <flowInitContext>
                            <masterBranchName>dev/release</masterBranchName>
                            <developBranchName>main</developBranchName>
                            <featureBranchPrefix>dev/feature-</featureBranchPrefix>
                            <releaseBranchPrefix>dev/release-</releaseBranchPrefix>
                            <hotfixBranchPrefix>dev/hotfix-</hotfixBranchPrefix>
                            <versionTagPrefix>v</versionTagPrefix>
                        </flowInitContext>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <enableSshAgent>true</enableSshAgent>
                        <pushReleases>true</pushReleases>
                    </configuration>
                </plugin>
            </plugins>

        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${plugins.jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-sdk-bom</artifactId>
                <version>1.3.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Keep the telemetry dependency in sync wth azure SDK bom version-->
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>1.31.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-ai-openai</artifactId>
                <version>${azure.openai.version}</version>
            </dependency>

            <dependency>
                <groupId>com.microsoft.azure.functions</groupId>
                <artifactId>azure-functions-java-library</artifactId>
                <version>${azure.functions.java.library.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${jakarta.validation-api.version}</version>
            </dependency>

            <!-- langchain4j -->
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>

            <!-- Logging dependency -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.36</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>2.25.2</version>
            </dependency>

            <!-- Testing dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter-engine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito-junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>uk.org.webcompere</groupId>
                <artifactId>model-assert</artifactId>
                <version>1.1.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Project wide dependencies listed here -->
        <!-- Log dependencies -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>uk.org.webcompere</groupId>
            <artifactId>model-assert</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
